--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib": "~0.1.1"
+    "grunt-contrib": "~0.11.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
