--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "url": "guilhermeserrano.com.br"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib": "~0.11.0",
+    "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.7.0"
   }
 }
